# processguard

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
demo/: demo_full.py  demo_loan.py  demo_week1.py  demo_week2_middleware.py  demo_week3_live.py
examples/: learned_refund_flow.bpmn  loan_approval.bpmn  loan_traces.py  refund_flow.bpmn  traces.py
processguard/: __init__.py  audit.py  bpmn_engine.py  cli.py  dashboard.py  guard.py  intent_parser.py  learn.py  llm_judge.py  middleware.py  models.py
processguard/integrations/: __init__.py  uipath.py
submission/: build_deck.py
tests/: test_all.py  test_guard.py  test_llm_judge.py  test_loan_approval.py  test_uipath_cloud.py
uipath/: processguard.openapi.json
video/: README.md  generate_movie_voiceover.py  generate_voiceover.py  movie-voiceover-script.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json  voiceover-script.md
video/src/: ProcessGuardDemo.tsx  ProcessGuardMovie.tsx  index.tsx  movie.css  styles.css
