[project]
name = "processguard"
version = "0.1.0"
description = "Runtime compliance firewall for AI agents — BPMN-enforced kill switch"
authors = [{name = "Yan Tong"}]
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "lxml>=5.0",
]

[project.optional-dependencies]
agents = ["langgraph>=1.0", "anthropic>=0.40", "openai>=2.0"]

[project.scripts]
processguard = "processguard.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["processguard*"]
